--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -19,10 +19,12 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 6.0.x
+        dotnet-version: 7.0.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build "/src/Penqueen.sln" -c Release --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test "/src/Penqueen.sln" --no-build --verbosity normal
+    - name: Pack
+      run: dotnet pack "src/Penqueen.CodeGenerators/Penqueen.CodeGenerators.csproj" -c Release
