--- a/src/Penqueen.Collections/Penqueen.Collections.csproj
+++ b/src/Penqueen.Collections/Penqueen.Collections.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <LangVersion>latest</LangVersion>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <LangVersion>latest</LangVersion>
     <!-- Generates a package at build -->
     <IncludeBuildOutput>true</IncludeBuildOutput>
-    <Title>Common types for Penqueen source generators</Title>
+    <Title>Collections types for Penqueen source generators</Title>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/nefremov/penqueen</PackageProjectUrl>
     <RepositoryUrl>https://github.com/nefremov/penqueen</RepositoryUrl>
@@ -21,8 +21,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Penqueen.Types\Penqueen.Types.csproj" />
   </ItemGroup>
 
 </Project>
