--- a/src/Penqueen.CodeGenerators/Penqueen.CodeGenerators.csproj
+++ b/src/Penqueen.CodeGenerators/Penqueen.CodeGenerators.csproj
@@ -23,6 +23,7 @@
     <Authors>Nick Efremov</Authors>
     <IncludeSymbols>True</IncludeSymbols>
     <PackageReleaseNotes>https://github.com/nefremov/penqueen/README.md</PackageReleaseNotes>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <!-- Do not include the generator as a lib dependency -->
   </PropertyGroup>
 
@@ -38,6 +39,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Penqueen.Types\Penqueen.Types.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
