--- a/samples/BlogSample/BlogSample.csproj
+++ b/samples/BlogSample/BlogSample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -13,8 +13,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.13" />
-    <PackageReference Include="Penqueen.CodeGenerators" Version="0.0.9" />
-    <PackageReference Include="Penqueen.Types" Version="0.0.9" />
+    <PackageReference Include="Penqueen.CodeGenerators" Version="0.0.10" />
+    <PackageReference Include="Penqueen.Collections" Version="0.0.10" />
+    <PackageReference Include="Penqueen.Types" Version="0.0.10" />
   </ItemGroup>
 
 </Project>
