--- a/src/Penqueen.CodeGenerators/Properties/launchSettings.json
+++ b/src/Penqueen.CodeGenerators/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Profile 1": {
       "commandName": "DebugRoslynComponent",
-      "targetProject": "..\\EFCoreTest1\\EFCoreTest1.csproj"
+      "targetProject": "..\\Penqueen.Tests\\Penqueen.Tests.csproj"
     }
   }
 }
